--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "-",
+  "name": "share-space",
+  "proxy": "http://localhost:8080",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -28,6 +29,5 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "vite": "^4.4.5"
-  },
-  "proxy": "http://localhost:8080/api"
+  }
 }
