--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "helmet": "^7.0.0",
     "mongoose": "^7.6.3",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "punycode": "^2.3.1"
   }
 }
