--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "share-space",
   "private": true,
+  "proxy": "http://localhost:8080",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -29,6 +30,5 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "vite": "^4.4.5"
-  },
-  "proxy": "http://localhost:8800/api"
+  }
 }
