--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "share-space",
   "private": true,
-  "proxy": "http://localhost:8080",
+  "proxy": "http://localhost:8080/api",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
