--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "name": "server",
   "version": "1.0.0",
+  "proxy": "http://localhost:5173",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,7 +13,6 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
@@ -20,7 +20,6 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
-    "path": "^0.12.7",
-    "punycode": "^2.3.1"
+    "path": "^0.12.7"
   }
 }
